--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -1,8 +1,8 @@
 on:
   workflow_dispatch:
   schedule:
-    # run every 4 hours
-    - cron: '20 4 * * *'
+    # run at 05:25 on Monday, Wednesday, and Friday.
+    - cron: '25 5 * * 1,3,5'
 name: Excavator
 jobs:
   excavate:
